Added Scripts for Prime and Merge